# comfyui-loadheicimage

./: .gitignore  LICENSE  LICENSE.txt  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
web/: heic_upload.js
