[project]
name = "comfyui-loadheicimage"
description = "ComfyUI custom node that loads images (including HEIC/HEIF) and provides browser-friendly previews."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/esp-dev/comfyui-loadheicimage"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "esp-dev"
DisplayName = "ComfyUI Load HEIC Image"
Icon = ""
includes = ["__init__.py", "nodes.py", "web"]
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

