[project]
name = "comfyui-loadheicimage"
description = "ComfyUI custom node that loads images (including HEIC/HEIF) and provides browser-friendly previews."
version = "1.0.1"
requires-python = ">=3.10"
license = { file = "LICENSE.txt" }

# Registry/Manager may also read requirements.txt, but keeping this explicit helps tooling.
dependencies = [
	"pillow>=10",
	"pillow-heif>=0.20.0",
]

classifiers = [
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
[project.urls]
Repository = "https://github.com/esp-dev/comfyui-loadheicimage"
"Bug Tracker" = "https://github.com/esp-dev/comfyui-loadheicimage/issues"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "szymonj"
DisplayName = "Load HEIC Image"
Icon = "https://raw.githubusercontent.com/esp-dev/comfyui-loadheicimage/main/icon-256.png"
includes = ["__init__.py", "nodes.py", "web"]
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

